# sorix

./: .gitattributes  .gitignore  README.md  autograd.md  cleanup_tensors.py  docs.py  fix_tensors.py  fix_tests.py  mkdocs.yml  pyproject.toml  tensor.md  verify_api.py
.github/workflows/: deploy_docs.yml  pypi_publish.yml  tests.yml  update_notebooks.yml
allison/clustering/: k_means.py
allison/metrics/: __init__.py  metrics.py
allison/nn/: __init__.py  layers.py
allison/tensor/: tensor.py
allison/utils/: math.py  utils.py
docs/: index.md
docs/api/: index.md  tensor.md
docs/api/clustering/: k_means.md
docs/api/cuda/: cuda.md
docs/api/datasets/: dataloader.md  dataset.md  train_test.md
docs/api/metrics/: metrics.md
docs/api/nn/: layers.md  loss.md  net.md
docs/api/optim/: optim.md
docs/api/preprocessing/: enconders.md  scalers.md  transformers.md
docs/api/utils/: math.md  utils.md
docs/examples/basics/: 1-tensor.ipynb  2-layers.ipynb
docs/examples/benchmarks/: index.md  mnist_comparison.ipynb
docs/examples/clustering/: Iris-dataset.ipynb  RandomDataset+GPU.ipynb
docs/examples/nn/: 1-regression.ipynb  2.1-classification-binary.ipynb  2.2-classification-multiclass.ipynb  3-Iris_dataset.ipynb  4-digit-recognizer.ipynb  model_weights.sor  regression_weights.sor
docs/examples/preprocessing/: encoders-scalers-transformers.ipynb
docs/examples/regression/: 1-linear-regression.ipynb  (+3 more)
docs/javascripts/: mathjax.js
docs/learn/: 01-tensor.ipynb  02-graph.ipynb  03-autograd.ipynb  04-layers.ipynb  autograd.ipynb  graph.ipynb  layers.ipynb  tensor.ipynb
examples/basics/: 1-tensor.ipynb  2-layers.ipynb
examples/benchmarks/: 1-Linear Regression.ipynb
examples/clustering/: k-means.ipynb  random-dataset.ipynb
examples/cnn/: digit-recognizer.ipynb
examples/nn/: 1-regression.ipynb  2.1-classification-binary.ipynb  2.2-classification-multiple.ipynb  3-Iris_dataset.ipynb  4-digit-recognizer.ipynb
examples/preprocessing/: encoders-scalers-transformers.ipynb
examples/regression/: 1-linear-regression.ipynb  2-logistic-regression.ipynb
latest/: 404.html  index.html  macros.py  objects.inv  sitemap.xml
latest/api/: index.html
latest/search/: search_index.json
scripts/: gen_ref_pages.py  update_notebook_links.py
sorix/: __init__.py  tensor.py
sorix/clustering/: k_means.py
sorix/cuda/: cuda.py
sorix/cupy/: __init__.py
sorix/datasets/: train_test.py
sorix/metrics/: __init__.py  metrics.py
sorix/nn/: __init__.py  init.py  layers.py  loss.py  net.py
sorix/optim/: __init__.py  optim.py
sorix/preprocessing/: __init__.py  encoders.py  scalers.py  transformers.py
sorix/tensor/: tensor.py
sorix/utils/: math.py  utils.py
tests/: notebooks.sh  test_clustering.py  test_cuda.py  test_data_advanced.py  test_datasets.py  test_init.py  test_loss.py  test_metrics.py  test_nn.py  test_nn_extended.py  test_nn_net.py  test_optim.py  test_preprocessing.py  test_preprocessing_serialization.py  test_tensor.py  test_tensor_extended.py  test_training.py  test_utils_general.py  test_utils_math.py
(+134 files in other folders)
