[project]
name = "sorix"
version = "1.0.0"
description = "A Machine Learning library for begainers"
authors = [{ name = "Mitchell Mirano", email = "mitchellmirano25@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]

# Para CUDA 13.x
cp13 = ["cupy-cuda13x>=13.0", "numpy>=2.0,<3.0"]

[dependency-groups]
dev = [
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]
docs = [
    "graphviz>=0.21",
    "markdown-include>=0.8.1",
    "mdx-include>=1.4.2",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.7.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python>=1.19.0",
    "pymdown-extensions>=10.17.1",
]
test = ["pytest>=9.0.1", "pytest-cov"]
