[project]
name = "sorix"
dynamic = ["version"]
description = "A minimalistic and high-performance Machine Learning library based on NumPy"
authors = [{ name = "Mitchell Mirano", email = "mitchellmirano25@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "machine-learning",
    "deep-learning",
    "neural-networks",
    "autograd",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=2.0"]

[project.urls]
Homepage = "https://github.com/Mitchell-Mirano/sorix"
Documentation = "https://mitchell-mirano.github.io/sorix/"
Repository = "https://github.com/Mitchell-Mirano/sorix.git"
Issues = "https://github.com/Mitchell-Mirano/sorix/issues"

[project.optional-dependencies]

# Para CUDA 13.x
cp13 = ["cupy-cuda13x>=13.0", "numpy>=2.0,<3.0"]

[dependency-groups]
dev = [
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]
docs = [
    "graphviz>=0.21",
    "markdown-include>=0.8.1",
    "mdx-include>=1.4.2",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.7.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python>=1.19.0",
    "pymdown-extensions>=10.17.1",
]
test = ["pytest>=9.0.1", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["sorix*"] # Incluye sorix y sus subpaquetes
exclude = [
    "site*",
    "scripts*",
    "docs*",
    "tests*",
] # Excluye explícitamente directorios no deseados

[tool.setuptools_scm]
write_to = "sorix/_version.py"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
